package dk.emilxaviervt._2025ice.Items;

import java.util.ArrayList;

public class Weapon extends Item {

    public Weapon(int id, String name, String description, boolean consumable, boolean equippable, boolean potions, int potency) {
        super(id, name, description, consumable, equippable, potions, potency);
    }
}
